force-app/main/default/objects/Reimbursement_Request__c/fields/Campaign__c.field-meta.xml
<CustomField>
    <fullName>Campaign__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Campaign</label>
    <referenceTo>Campaign</referenceTo>
    <relationshipLabel>Reimbursement Requests</relationshipLabel>
    <relationshipName>Reimbursement_Requests</relationshipName>
    <type>Lookup</type>
</CustomField>