force-app/main/default/objects/Reimbursement_Request__c/fields/Employee__c.field-meta.xml
<CustomField>
    <fullName>Employee__c</fullName>
    <label>Employee</label>
    <referenceTo>SFDC_Employee__c</referenceTo>
    <relationshipLabel>Reimbursement Requests</relationshipLabel>
    <relationshipName>Reimbursement_Requests</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>