force-app/main/default/objects/Reimbursement_Request__c/fields/End_Address__c.field-meta.xml
<CustomField>
    <fullName>End_Address__c</fullName>
    <label>End Address</label>
    <type>Address</type>
</CustomField>