force-app/main/default/objects/Reimbursement_Request__c/fields/Kilometers_Driven__c.field-meta.xml
<CustomField>
    <fullName>Kilometers_Driven__c</fullName>
    <label>Kilometers Driven</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>