force-app/main/default/objects/Reimbursement_Request__c/fields/Start_Address__c.field-meta.xml
<CustomField>
    <fullName>Start_Address__c</fullName>
    <label>Start Address</label>
    <type>Address</type>
</CustomField>