force-app/main/default/objects/Reimbursement_Request__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>CREATED_DATE</columns>
    <columns>NAME</columns>
    <columns>Approval_Status__c</columns>
    <columns>Employee__c</columns>
    <columns>Start_Address__City__s</columns>
    <columns>End_Address__City__s</columns>
    <columns>Market_Unit__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>